# EEE231

./: .coveragerc  .flake8  .gitignore  .pylintrc  Pipfile  README.md  autopylint.yml  group-B.py  main.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: autoblack.yml  autopylint.yml  autotest.yml  coverage.yml  main.yml  python-app.yml
Exception/: Check_ground_node_Exception.py
directedgraph/: __init__.py
directedgraph/dgapp/: __init__.py  class_GraphController.py  graphcontroller.py  insert_and_remove.py  save(auto).py  save_auto.py
directedgraph/dgcore/: DemoGraph.csv  DemoGraph.txt  __init__.py  excp.py  graph.py  graph_application.py  graphapplication.py  graphcomponent.py  graphcomponent_arc.py  graphelement.py
directedgraph/dggui/: 1nodeclass.py  __init__.py  app.py  arcitem.py  arcitem_old.py  dialog.py  directedgraphapplication.py  directedgraphscene.py  grapheditor.py  grapheditorgui.py  grapheditormainwindow.py  grapheditorscene.py  new.py  nodeitem.py
directedgraph/dgutils/: __init__.py  filemanager.py  graphsimulator.py
docs/: dgcore.md
pir-example/: group-B.py
playground/: EEE231-group-A-main.py
playground/EEE231-group-C-main/: .gitignore  Node.py  NodeColor1.py  README.md  TestNodeColor.py  graphview.py  gui.py  requirements.txt
playground/EEE231-group-C-main/Component/: com.py
playground/EEE231-group-C-main/pir-example/: group-C.py
tests/: __init__.py  test.xml  test_dgapp.py  test_dgcore.py  test_dgcore_graph.py  test_dgcore_graph_application.py  test_dgcore_graphapplication.py  test_dgcore_graphcomponent.py  test_dgcore_graphcomponent_arc.py  test_dgcore_graphelement.py  test_dggui.py  test_dgutils.py  test_dgutils_filemanager.py  test_out.xml  test_rlc.cir  test_rlc.xml
