[tool.poetry]
name = "EEE231"
version = "0.1.0"
description = "EEE231 Directed Graph Editor"
readme = "README.md"
authors = ["Alex <30626291+Spehhhhh@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.11"
PySide6 = "^6.2.2"

[tool.poetry.dev-dependencies]
# Static Type Checker
mypy = "^0.930"
# Linter
pylint = "^2.12.2"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
mccabe = "^0.6.1"
pyflakes = "^2.4.0"
# Formatter
black = "^21.12b0"
isort = "^5.10.1"
# Unit Testing
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coverage = {version = "^6.2", extras = ["toml"]}
# Test automation
nox = "^2021.10.1"
# Other dependencies
loguru = "^0.5.3"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.coverage.run]
omit = [".*", "*/site-packages/*","*/__init__.py", "*/__main__.py","*/tests", "*/excp.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
extend_skip_glob=[".*", "*/site-packages/*","*/__init__.py", "*/__main__.py","*/tests", "*/excp.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
